--- a/main-page.html
+++ b/main-page.html
@@ -114,9 +114,12 @@
         <div class="square" num="97"></div>
         <div class="square" num="98"></div>
         <div class="square" num="99"></div>
+
+
             
 
-            <div id="player" class="circal"></div>
+        <div id="player" class="circal"></div>
+        <div id="winArea" class="circal"></div>
         </section>
 
         <section>
