--- a/main-page.html
+++ b/main-page.html
@@ -14,106 +14,106 @@
 
        
         <section id="board">
-            <div class="square" num="0"></div>
-        <div class="square" num="1"></div>
-        <div class="square" num="2"></div>
-        <div class="square" num="3"></div>
-        <div class="square" num="4"></div>
-        <div class="square" num="5"></div>
-        <div class="square" num="6"></div>
-        <div class="square" num="7"></div>
-        <div class="square" num="8"></div>
-        <div class="square" num="9"></div>
-        <div class="square" num="10"></div>
-        <div class="square" num="11"></div>
-        <div class="square" num="12"></div>
-        <div class="square" num="13"></div>
-        <div class="square" num="14"></div>
-        <div class="square" num="15"></div>
-        <div class="square" num="16"></div>
-        <div class="square" num="17"></div>
-        <div class="square" num="18"></div>
-        <div class="square" num="19"></div>
-        <div class="square" num="20"></div>
-        <div class="square" num="21"></div>
-        <div class="square" num="22"></div>
-        <div class="square" num="23"></div>
-        <div class="square" num="24"></div>
-        <div class="square" num="25"></div>
-        <div class="square" num="26"></div>
-        <div class="square" num="27"></div>
-        <div class="square" num="28"></div>
-        <div class="square" num="29"></div>
-        <div class="square" num="30"></div>
-        <div class="square" num="31"></div>
-        <div class="square" num="32"></div>
-        <div class="square" num="33"></div>
-        <div class="square" num="34"></div>
-        <div class="square" num="35"></div>
-        <div class="square" num="36"></div>
-        <div class="square" num="37"></div>
-        <div class="square" num="38"></div>
-        <div class="square" num="39"></div>
-        <div class="square" num="40"></div>
-        <div class="square" num="41"></div>
-        <div class="square" num="42"></div>
-        <div class="square" num="43"></div>
-        <div class="square" num="44"></div>
-        <div class="square" num="45"></div>
-        <div class="square" num="46"></div>
-        <div class="square" num="47"></div>
-        <div class="square" num="48"></div>
-        <div class="square" num="49"></div>
-        <div class="square" num="50"></div>
-        <div class="square" num="51"></div>
-        <div class="square" num="52"></div>
-        <div class="square" num="53"></div>
-        <div class="square" num="54"></div>
-        <div class="square" num="55"></div>
-        <div class="square" num="56"></div>
-        <div class="square" num="57"></div>
-        <div class="square" num="58"></div>
-        <div class="square" num="59"></div>
-        <div class="square" num="60"></div>
-        <div class="square" num="61"></div>
-        <div class="square" num="62"></div>
-        <div class="square" num="63"></div>
-        <div class="square" num="64"></div>
-        <div class="square" num="65"></div>
-        <div class="square" num="66"></div>
-        <div class="square" num="67"></div>
-        <div class="square" num="68"></div>
-        <div class="square" num="69"></div>
-        <div class="square" num="70"></div>
-        <div class="square" num="71"></div>
-        <div class="square" num="72"></div>
-        <div class="square" num="73"></div>
-        <div class="square" num="74"></div>
-        <div class="square" num="75"></div>
-        <div class="square" num="76"></div>
-        <div class="square" num="77"></div>
-        <div class="square" num="78"></div>
-        <div class="square" num="79"></div>
-        <div class="square" num="80"></div>
-        <div class="square" num="81"></div>
-        <div class="square" num="82"></div>
-        <div class="square" num="83"></div>
-        <div class="square" num="84"></div>
-        <div class="square" num="85"></div>
-        <div class="square" num="86"></div>
-        <div class="square" num="87"></div>
-        <div class="square" num="88"></div>
-        <div class="square" num="89"></div>
-        <div class="square" num="90"></div>
-        <div class="square" num="91"></div>
-        <div class="square" num="92"></div>
-        <div class="square" num="93"></div>
-        <div class="square" num="94"></div>
-        <div class="square" num="95"></div>
-        <div class="square" num="96"></div>
-        <div class="square" num="97"></div>
-        <div class="square" num="98"></div>
-        <div class="square" num="99"></div>
+        <div class="square" id="0"></div>
+        <div class="square" id="1"></div>
+        <div class="square" id="2"></div>
+        <div class="square" id="3"></div>
+        <div class="square" id="4"></div>
+        <div class="square" id="5"></div>
+        <div class="square" id="6"></div>
+        <div class="square" id="7"></div>
+        <div class="square" id="8"></div>
+        <div class="square" id="9"></div>
+        <div class="square" id="10"></div>
+        <div class="square" id="11"></div>
+        <div class="square" id="12"></div>
+        <div class="square" id="13"></div>
+        <div class="square" id="14"></div>
+        <div class="square" id="15"></div>
+        <div class="square" id="16"></div>
+        <div class="square" id="17"></div>
+        <div class="square" id="18"></div>
+        <div class="square" id="19"></div>
+        <div class="square" id="20"></div>
+        <div class="square" id="21"></div>
+        <div class="square" id="22"></div>
+        <div class="square" id="23"></div>
+        <div class="square" id="24"></div>
+        <div class="square" id="25"></div>
+        <div class="square" id="26"></div>
+        <div class="square" id="27"></div>
+        <div class="square" id="28"></div>
+        <div class="square" id="29"></div>
+        <div class="square" id="30"></div>
+        <div class="square" id="31"></div>
+        <div class="square" id="32"></div>
+        <div class="square" id="33"></div>
+        <div class="square" id="34"></div>
+        <div class="square" id="35"></div>
+        <div class="square" id="36"></div>
+        <div class="square" id="37"></div>
+        <div class="square" id="38"></div>
+        <div class="square" id="39"></div>
+        <div class="square" id="40"></div>
+        <div class="square" id="41"></div>
+        <div class="square" id="42"></div>
+        <div class="square" id="43"></div>
+        <div class="square" id="44"></div>
+        <div class="square" id="45"></div>
+        <div class="square" id="46"></div>
+        <div class="square" id="47"></div>
+        <div class="square" id="48"></div>
+        <div class="square" id="49"></div>
+        <div class="square" id="50"></div>
+        <div class="square" id="51"></div>
+        <div class="square" id="52"></div>
+        <div class="square" id="53"></div>
+        <div class="square" id="54"></div>
+        <div class="square" id="55"></div>
+        <div class="square" id="56"></div>
+        <div class="square" id="57"></div>
+        <div class="square" id="58"></div>
+        <div class="square" id="59"></div>
+        <div class="square" id="60"></div>
+        <div class="square" id="61"></div>
+        <div class="square" id="62"></div>
+        <div class="square" id="63"></div>
+        <div class="square" id="64"></div>
+        <div class="square" id="65"></div>
+        <div class="square" id="66"></div>
+        <div class="square" id="67"></div>
+        <div class="square" id="68"></div>
+        <div class="square" id="69"></div>
+        <div class="square" id="70"></div>
+        <div class="square" id="71"></div>
+        <div class="square" id="72"></div>
+        <div class="square" id="73"></div>
+        <div class="square" id="74"></div>
+        <div class="square" id="75"></div>
+        <div class="square" id="76"></div>
+        <div class="square" id="77"></div>
+        <div class="square" id="78"></div>
+        <div class="square" id="79"></div>
+        <div class="square" id="80"></div>
+        <div class="square" id="81"></div>
+        <div class="square" id="82"></div>
+        <div class="square" id="83"></div>
+        <div class="square" id="84"></div>
+        <div class="square" id="85"></div>
+        <div class="square" id="86"></div>
+        <div class="square" id="87"></div>
+        <div class="square" id="88"></div>
+        <div class="square" id="89"></div>
+        <div class="square" id="90"></div>
+        <div class="square" id="91"></div>
+        <div class="square" id="92"></div>
+        <div class="square" id="93"></div>
+        <div class="square" id="94"></div>
+        <div class="square" id="95"></div>
+        <div class="square" id="96"></div>
+        <div class="square" id="97"></div>
+        <div class="square" id="98"></div>
+        <div class="square" id="id99"></div>
 
 
             
