--- a/main-page.html
+++ b/main-page.html
@@ -111,7 +111,7 @@
         <div class="square" id="94"></div>
         <div class="square" id="95"></div>
         <div class="square" id="96"></div>
-        <div class="square" id="97"></div>
+        <div class="square" id="id97"></div>
         <div class="square" id="98"></div>
         <div class="square" id="id99"></div>
 
@@ -120,6 +120,7 @@
 
         <div id="player" class="circal"></div>
         <div id="winArea" class="circal"></div>
+        <div id="bomb" class="circal"></div>
         </section>
 
         <section>
