--- a/main-page.html
+++ b/main-page.html
@@ -11,6 +11,7 @@
 <body>
     <main>
         <h1></h1>
+        <h3 id="moven"></h3>
 
        
         <section id="board">
@@ -111,9 +112,9 @@
         <div class="square" id="94"></div>
         <div class="square" id="95"></div>
         <div class="square" id="96"></div>
-        <div class="square" id="id97"></div>
+        <div class="square" id="97"></div>
         <div class="square" id="98"></div>
-        <div class="square" id="id99"></div>
+        <div class="square" id="99"></div>
 
 
             
@@ -128,7 +129,9 @@
             <button id="left">left</button>
             <button id="down">Down</button>
             <button id="right">Right</button>
+            <button onclick="resetPage()" id="reset">Reset</button>
         </section>
+
     </main>
 </body>
 </html>
