--- a/main-page.html
+++ b/main-page.html
@@ -12,7 +12,7 @@
 
 <body>
     <main>
-        <h1></h1>
+        <h1>The cat is hungry, be careful there is a bomb</h1>
         <h3 id="moven"></h3>
 
 
