--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 
         <section id="levels">
             <button onclick="moveToGame()" id="lv1">Level 1</button>
-            <button onclick="giveAlert()" id="lv2">Level 2</button>
+            <button onclick="moveToGame2()" id="lv2">Level 2</button>
             <button onclick="giveAlert()" id="lv3">level 3</button>
         </section>
     </main>
     <script src="script1.js"></script>
+    
 </body>
 </html>
