add some buttons

--- a/level2.html
+++ b/level2.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <main>
+        <header>
+            <button onclick="moveToGame()" id="Previous">Previous stage</button>
+            <button onclick="seloctor()" id="menu">Level seloctor</button>
+            <button onclick="alert2()" id="nextp">Next Level</button>  
+        </header>
         <h1>The cat is still hungry</h1>
         <h3 id="moven"></h3>
 
@@ -177,7 +182,7 @@
 
             </div>
             <div>
-                <button onclick="resetPage()" id="reset">Reset</button>
+                <button onclick="moveToGame2()" id="reset">Reset</button>
             </div>
 
         </div>
