--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css" />
-    <title>easy-mazze</title>
+    <title>Cat Maze</title>
 </head>
 <body>
     <header>
-    <h1 id="head">Easy Mazze</h1>
+    <h1 id="head">Cat Maze</h1>
     </header>
 
     <main>
